--- a/best_model.ipynb
+++ b/best_model.ipynb
@@ -328,18 +328,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 2), norm='l2', preprocessor=None, smooth_idf=True,\n",
+       "...f',\n",
+       "  max_iter=-1, probability=False, random_state=11, shrinking=True,\n",
+       "  tol=0.001, verbose=False))])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.913498035559699"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f1_score(best_model.predict(X_test), y_test)"
    ]
@@ -353,12 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the model to disk with pickle\n",
-    "model_file_name = \"app_predict/webapp/model_sentiment_prediction.pkl\"  \n",
+    "model_file_name = \"app_predict/webapp/model/model_sentiment_prediction.pkl\"  \n",
     "\n",
     "with open(model_file_name, 'wb') as file:  \n",
     "    pickle.dump(best_model, file)"
@@ -366,12 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['app_predict/webapp/model/model_sentiment_prediction.sav']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# save the model to disk with joblib\n",
-    "filename = 'app_predict/webapp/model_sentiment_prediction.sav'\n",
+    "filename = 'app_predict/webapp/model/model_sentiment_prediction.sav'\n",
     "joblib.dump(best_model, filename)"
    ]
   },
