--- a/app_predict/notebooks/keras_MLP.ipynb
+++ b/app_predict/notebooks/keras_MLP.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,234 @@
       "Epoch 1/1\n",
       "28096/28096 [==============================] - 115s 4ms/step - loss: 0.3360 - acc: 0.8580 6s  - ETA: 3s - los\n",
       "14048/14048 [==============================] - 60s 4ms/step\n",
-      "28096/28096 [==============================] - 136s 5ms/step\n"
+      "28096/28096 [==============================] - 136s 5ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 108s 4ms/step - loss: 0.3432 - acc: 0.8519\n",
+      "14048/14048 [==============================] - 61s 4ms/step\n",
+      "28096/28096 [==============================] - 123s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 114s 4ms/step - loss: 0.3356 - acc: 0.8580\n",
+      "14048/14048 [==============================] - 51s 4ms/step\n",
+      "28096/28096 [==============================] - 104s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 106s 4ms/step - loss: 0.3232 - acc: 0.8637\n",
+      "14048/14048 [==============================] - 53s 4ms/step\n",
+      "28096/28096 [==============================] - 107s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 114s 4ms/step - loss: 0.3289 - acc: 0.8591\n",
+      "14048/14048 [==============================] - 63s 4ms/step\n",
+      "28096/28096 [==============================] - 119s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 107s 4ms/step - loss: 0.3282 - acc: 0.8566\n",
+      "14048/14048 [==============================] - 57s 4ms/step\n",
+      "28096/28096 [==============================] - 139s 5ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 113s 4ms/step - loss: 0.3154 - acc: 0.8673\n",
+      "14048/14048 [==============================] - 63s 4ms/step\n",
+      "28096/28096 [==============================] - 122s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 111s 4ms/step - loss: 0.3217 - acc: 0.8607\n",
+      "14048/14048 [==============================] - 61s 4ms/step\n",
+      "28096/28096 [==============================] - 111s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 116s 4ms/step - loss: 0.3118 - acc: 0.8658\n",
+      "14048/14048 [==============================] - 64s 5ms/step\n",
+      "28096/28096 [==============================] - 132s 5ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 112s 4ms/step - loss: 0.3057 - acc: 0.8722\n",
+      "14048/14048 [==============================] - 52s 4ms/step\n",
+      "28096/28096 [==============================] - 103s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 105s 4ms/step - loss: 0.3125 - acc: 0.8700\n",
+      "14048/14048 [==============================] - 59s 4ms/step\n",
+      "28096/28096 [==============================] - 105s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 108s 4ms/step - loss: 0.3063 - acc: 0.8731\n",
+      "14048/14048 [==============================] - 59s 4ms/step\n",
+      "28096/28096 [==============================] - 108s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 115s 4ms/step - loss: 0.3005 - acc: 0.8769\n",
+      "14048/14048 [==============================] - 60s 4ms/step\n",
+      "28096/28096 [==============================] - 111s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 121s 4ms/step - loss: 0.3039 - acc: 0.8743\n",
+      "14048/14048 [==============================] - 56s 4ms/step\n",
+      "28096/28096 [==============================] - 101s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 108s 4ms/step - loss: 0.3025 - acc: 0.8764 3s\n",
+      "14048/14048 [==============================] - 53s 4ms/step\n",
+      "28096/28096 [==============================] - 97s 3ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 109s 4ms/step - loss: 0.2957 - acc: 0.8782\n",
+      "14048/14048 [==============================] - 51s 4ms/step\n",
+      "28096/28096 [==============================] - 95s 3ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 108s 4ms/step - loss: 0.3004 - acc: 0.8793\n",
+      "14048/14048 [==============================] - 56s 4ms/step\n",
+      "28096/28096 [==============================] - 105s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 107s 4ms/step - loss: 0.2964 - acc: 0.8749\n",
+      "14048/14048 [==============================] - 52s 4ms/step\n",
+      "28096/28096 [==============================] - 102s 4ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 471s 17ms/step - loss: 0.2885 - acc: 0.8773\n",
+      "14048/14048 [==============================] - 52s 4ms/step\n",
+      "28096/28096 [==============================] - 97s 3ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 398s 14ms/step - loss: 0.2888 - acc: 0.8743\n",
+      "14048/14048 [==============================] - 47s 3ms/step\n",
+      "28096/28096 [==============================] - 73s 3ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 355s 13ms/step - loss: 0.2862 - acc: 0.8757\n",
+      "14048/14048 [==============================] - 40s 3ms/step\n",
+      "28096/28096 [==============================] - 74s 3ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 181s 6ms/step - loss: 0.2836 - acc: 0.8762 3s - loss: 0.284\n",
+      "14048/14048 [==============================] - 11s 804us/step\n",
+      "28096/28096 [==============================] - 19s 690us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 142s 5ms/step - loss: 0.2897 - acc: 0.8749\n",
+      "14048/14048 [==============================] - 10s 712us/step\n",
+      "28096/28096 [==============================] - 19s 685us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2859 - acc: 0.8771\n",
+      "14048/14048 [==============================] - 10s 723us/step\n",
+      "28096/28096 [==============================] - 19s 668us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2852 - acc: 0.8764\n",
+      "14048/14048 [==============================] - 10s 714us/step\n",
+      "28096/28096 [==============================] - 19s 676us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2864 - acc: 0.8791\n",
+      "14048/14048 [==============================] - 10s 710us/step\n",
+      "28096/28096 [==============================] - 19s 681us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2839 - acc: 0.8803\n",
+      "14048/14048 [==============================] - 10s 711us/step\n",
+      "28096/28096 [==============================] - 19s 677us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 140s 5ms/step - loss: 0.2826 - acc: 0.8774\n",
+      "14048/14048 [==============================] - 10s 715us/step\n",
+      "28096/28096 [==============================] - 19s 682us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2863 - acc: 0.8786\n",
+      "14048/14048 [==============================] - 10s 710us/step\n",
+      "28096/28096 [==============================] - 20s 698us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2799 - acc: 0.8841\n",
+      "14048/14048 [==============================] - 10s 710us/step\n",
+      "28096/28096 [==============================] - 19s 691us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2811 - acc: 0.8798\n",
+      "14048/14048 [==============================] - 10s 734us/step\n",
+      "28096/28096 [==============================] - 19s 694us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2858 - acc: 0.8773\n",
+      "14048/14048 [==============================] - 10s 713us/step\n",
+      "28096/28096 [==============================] - 19s 686us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2803 - acc: 0.8812\n",
+      "14048/14048 [==============================] - 10s 717us/step\n",
+      "28096/28096 [==============================] - 19s 688us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 142s 5ms/step - loss: 0.2813 - acc: 0.8807\n",
+      "14048/14048 [==============================] - 10s 716us/step\n",
+      "28096/28096 [==============================] - 19s 686us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2847 - acc: 0.8779\n",
+      "14048/14048 [==============================] - 10s 719us/step\n",
+      "28096/28096 [==============================] - 20s 695us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 141s 5ms/step - loss: 0.2808 - acc: 0.8802\n",
+      "14048/14048 [==============================] - 10s 723us/step\n",
+      "28096/28096 [==============================] - 20s 698us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 264s 9ms/step - loss: 0.2842 - acc: 0.8782\n",
+      "14048/14048 [==============================] - 13s 921us/step\n",
+      "28096/28096 [==============================] - 26s 910us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 265s 9ms/step - loss: 0.2873 - acc: 0.8768\n",
+      "14048/14048 [==============================] - 13s 930us/step\n",
+      "28096/28096 [==============================] - 25s 888us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 265s 9ms/step - loss: 0.2821 - acc: 0.8774\n",
+      "14048/14048 [==============================] - 13s 957us/step\n",
+      "28096/28096 [==============================] - 25s 893us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 266s 9ms/step - loss: 0.2807 - acc: 0.8797\n",
+      "14048/14048 [==============================] - 13s 935us/step\n",
+      "28096/28096 [==============================] - 25s 890us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 265s 9ms/step - loss: 0.2855 - acc: 0.8778\n",
+      "14048/14048 [==============================] - 13s 939us/step\n",
+      "28096/28096 [==============================] - 25s 890us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 265s 9ms/step - loss: 0.2790 - acc: 0.8798\n",
+      "14048/14048 [==============================] - 13s 934us/step\n",
+      "28096/28096 [==============================] - 26s 914us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 266s 9ms/step - loss: 0.2819 - acc: 0.8785\n",
+      "14048/14048 [==============================] - 13s 951us/step\n",
+      "28096/28096 [==============================] - 27s 952us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 265s 9ms/step - loss: 0.2833 - acc: 0.8777\n",
+      "14048/14048 [==============================] - 13s 959us/step\n",
+      "28096/28096 [==============================] - 25s 904us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 267s 9ms/step - loss: 0.2790 - acc: 0.8792\n",
+      "14048/14048 [==============================] - 14s 1ms/step\n",
+      "28096/28096 [==============================] - 26s 914us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 266s 9ms/step - loss: 0.2826 - acc: 0.8813\n",
+      "14048/14048 [==============================] - 14s 975us/step\n",
+      "28096/28096 [==============================] - 25s 904us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 268s 10ms/step - loss: 0.2846 - acc: 0.8785\n",
+      "14048/14048 [==============================] - 14s 977us/step\n",
+      "28096/28096 [==============================] - 26s 926us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 270s 10ms/step - loss: 0.2776 - acc: 0.8814\n",
+      "14048/14048 [==============================] - 14s 980us/step\n",
+      "28096/28096 [==============================] - 26s 938us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 267s 9ms/step - loss: 0.2790 - acc: 0.8817\n",
+      "14048/14048 [==============================] - 14s 992us/step\n",
+      "28096/28096 [==============================] - 26s 937us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 267s 9ms/step - loss: 0.2820 - acc: 0.8809\n",
+      "14048/14048 [==============================] - 14s 974us/step\n",
+      "28096/28096 [==============================] - 26s 936us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 270s 10ms/step - loss: 0.2786 - acc: 0.8801\n",
+      "14048/14048 [==============================] - 16s 1ms/step\n",
+      "28096/28096 [==============================] - 29s 1ms/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 277s 10ms/step - loss: 0.2828 - acc: 0.8775\n",
+      "14048/14048 [==============================] - 14s 1000us/step\n",
+      "28096/28096 [==============================] - 27s 951us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 268s 10ms/step - loss: 0.2832 - acc: 0.8781\n",
+      "14048/14048 [==============================] - 14s 997us/step\n",
+      "28096/28096 [==============================] - 26s 935us/step\n",
+      "Epoch 1/1\n",
+      "28096/28096 [==============================] - 267s 10ms/step - loss: 0.2800 - acc: 0.8807\n",
+      "14048/14048 [==============================] - 14s 1ms/step\n",
+      "28096/28096 [==============================] - 27s 948us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  54 out of  54 | elapsed: 402.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "42144/42144 [==============================] - 47s 1ms/step - loss: 0.2929 - acc: 0.8799\n"
      ]
     }
    ],
@@ -424,16 +651,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'sequential_55',\n",
+       " 'layers': [{'class_name': 'Dense',\n",
+       "   'config': {'name': 'dense_163',\n",
+       "    'trainable': True,\n",
+       "    'batch_input_shape': (None, 50000),\n",
+       "    'dtype': 'float32',\n",
+       "    'units': 32,\n",
+       "    'activation': 'relu',\n",
+       "    'use_bias': True,\n",
+       "    'kernel_initializer': {'class_name': 'RandomUniform',\n",
+       "     'config': {'minval': -0.05, 'maxval': 0.05, 'seed': None}},\n",
+       "    'bias_initializer': {'class_name': 'Zeros', 'config': {}},\n",
+       "    'kernel_regularizer': None,\n",
+       "    'bias_regularizer': None,\n",
+       "    'activity_regularizer': None,\n",
+       "    'kernel_constraint': None,\n",
+       "    'bias_constraint': None}},\n",
+       "  {'class_name': 'Dropout',\n",
+       "   'config': {'name': 'dropout_55',\n",
+       "    'trainable': True,\n",
+       "    'rate': 0.4,\n",
+       "    'noise_shape': None,\n",
+       "    'seed': None}},\n",
+       "  {'class_name': 'Dense',\n",
+       "   'config': {'name': 'dense_164',\n",
+       "    'trainable': True,\n",
+       "    'units': 32,\n",
+       "    'activation': 'relu',\n",
+       "    'use_bias': True,\n",
+       "    'kernel_initializer': {'class_name': 'VarianceScaling',\n",
+       "     'config': {'scale': 1.0,\n",
+       "      'mode': 'fan_avg',\n",
+       "      'distribution': 'uniform',\n",
+       "      'seed': None}},\n",
+       "    'bias_initializer': {'class_name': 'Zeros', 'config': {}},\n",
+       "    'kernel_regularizer': None,\n",
+       "    'bias_regularizer': None,\n",
+       "    'activity_regularizer': None,\n",
+       "    'kernel_constraint': None,\n",
+       "    'bias_constraint': None}},\n",
+       "  {'class_name': 'Dense',\n",
+       "   'config': {'name': 'dense_165',\n",
+       "    'trainable': True,\n",
+       "    'units': 1,\n",
+       "    'activation': 'sigmoid',\n",
+       "    'use_bias': True,\n",
+       "    'kernel_initializer': {'class_name': 'VarianceScaling',\n",
+       "     'config': {'scale': 1.0,\n",
+       "      'mode': 'fan_avg',\n",
+       "      'distribution': 'uniform',\n",
+       "      'seed': None}},\n",
+       "    'bias_initializer': {'class_name': 'Zeros', 'config': {}},\n",
+       "    'kernel_regularizer': None,\n",
+       "    'bias_regularizer': None,\n",
+       "    'activity_regularizer': None,\n",
+       "    'kernel_constraint': None,\n",
+       "    'bias_constraint': None}}]}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    grid_result.best_estimator_.steps[1][1].model.get_config()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-34-05d82208da29>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-34-05d82208da29>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def search_huperparams():\n",
     "    "
