Changed MLP network strucrure? selected the best model

--- a/app_predict/notebooks/keras_mlp_select_structure.ipynb
+++ b/app_predict/notebooks/keras_mlp_select_structure.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.layers import BatchNormalization\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, TensorBoard\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, TensorBoard, ModelCheckpoint\n",
     "from tensorflow.keras import regularizers\n",
     "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
     "\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...          1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result this step presents in *tensorboard.ipynb*."
+    "The result this step presents in *tensorboard.ipynb* and folder *logs/mlp/fit*"
    ]
   },
   {
@@ -927,6 +927,115 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choose the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 35822 samples, validate on 6322 samples\n",
+      "WARNING:tensorflow:From C:\\Users\\Tatsiana_Drabysheusk\\AppData\\Local\\Continuum\\miniconda3\\envs\\Project_New\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Epoch 1/30\n",
+      "35820/35822 [============================>.] - ETA: 0s - loss: 0.3713 - acc: 0.8604 - get_f1: 0.8495\n",
+      "Epoch 00001: val_loss improved from inf to 0.21509, saving model to model_mlp_best.hdf5\n",
+      "35822/35822 [==============================] - 50s 1ms/sample - loss: 0.3713 - acc: 0.8604 - get_f1: 0.8496 - val_loss: 0.2151 - val_acc: 0.9228 - val_get_f1: 0.9212\n",
+      "Epoch 2/30\n",
+      "35820/35822 [============================>.] - ETA: 0s - loss: 0.1695 - acc: 0.9432 - get_f1: 0.9419\n",
+      "Epoch 00002: val_loss improved from 0.21509 to 0.19244, saving model to model_mlp_best.hdf5\n",
+      "35822/35822 [==============================] - 51s 1ms/sample - loss: 0.1695 - acc: 0.9432 - get_f1: 0.9420 - val_loss: 0.1924 - val_acc: 0.9242 - val_get_f1: 0.9228\n",
+      "Epoch 3/30\n",
+      "35790/35822 [============================>.] - ETA: 0s - loss: 0.1044 - acc: 0.9689 - get_f1: 0.9680\n",
+      "Epoch 00003: val_loss did not improve from 0.19244\n",
+      "35822/35822 [==============================] - 50s 1ms/sample - loss: 0.1045 - acc: 0.9689 - get_f1: 0.9671 - val_loss: 0.1993 - val_acc: 0.9249 - val_get_f1: 0.9231\n",
+      "Epoch 4/30\n",
+      "35820/35822 [============================>.] - ETA: 0s - loss: 0.0687 - acc: 0.9806 - get_f1: 0.9800\n",
+      "Epoch 00004: val_loss did not improve from 0.19244\n",
+      "35822/35822 [==============================] - 50s 1ms/sample - loss: 0.0687 - acc: 0.9806 - get_f1: 0.9791 - val_loss: 0.2165 - val_acc: 0.9219 - val_get_f1: 0.9207\n",
+      "Epoch 5/30\n",
+      "35790/35822 [============================>.] - ETA: 0s - loss: 0.0467 - acc: 0.9875 - get_f1: 0.9870\n",
+      "Epoch 00005: val_loss did not improve from 0.19244\n",
+      "35822/35822 [==============================] - 51s 1ms/sample - loss: 0.0467 - acc: 0.9874 - get_f1: 0.9870 - val_loss: 0.2380 - val_acc: 0.9228 - val_get_f1: 0.9214\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 30\n",
+    "epochs = 30\n",
+    "\n",
+    "early_stop = EarlyStopping(monitor='val_loss', \n",
+    "                           patience=3)\n",
+    "cp_callback = ModelCheckpoint(filepath='model_mlp_best.hdf5',\n",
+    "                              save_best_only=True,\n",
+    "                              verbose=1)\n",
+    "\n",
+    "model_best = Sequential()\n",
+    "model_best.add(Dense(32, input_shape=(MAX_FEATURES,), activation='relu'))\n",
+    "model_best.add(Dropout(0.6))\n",
+    "model_best.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "\n",
+    "    \n",
+    "model_best.compile(loss='binary_crossentropy',\n",
+    "                  optimizer='adam',\n",
+    "                  metrics=['accuracy', get_f1])\n",
+    "\n",
+    "\n",
+    "history = model_best.fit(X_train_features, y_train,\n",
+    "                    batch_size=batch_size,\n",
+    "                    epochs=epochs,\n",
+    "                    callbacks=[early_stop, cp_callback],\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(X_valid_features, y_valid),\n",
+    "                   shuffle=True,)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score for test set: \n",
+      "0.9109333333333334\n",
+      "F1 score for validation set: \n",
+      "0.923510971786834\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('F1 score for test set: ')\n",
+    "print(f1_score(model_best.predict_classes(X_test_features), y_test))\n",
+    "print('F1 score for validation set: ' )\n",
+    "print(f1_score(model_best.predict_classes(X_valid_features), y_valid))"
    ]
   },
   {
