--- a/app_predict/notebooks/tensorboard.ipynb
+++ b/app_predict/notebooks/tensorboard.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard.notebook extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard.notebook\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the TensorBoard notebook extension\n",
     "%load_ext tensorboard.notebook"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,35 +21,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Known TensorBoard instances:\n",
-      "  - port 6006: logdir logs/fit (started 1 day, 15:30:40 ago; pid 10048)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "notebook.list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10048), started 1 day, 15:30:40 ago. (Use '!kill 10048' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10560), started 0:01:51 ago. (Use '!kill 10560' to kill it.)"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "invalid info file: 'C:\\\\Users\\\\TATSIA~1\\\\AppData\\\\Local\\\\Temp\\\\.tensorboard-info\\\\pid-21276.info'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tatsiana_Drabysheusk\\AppData\\Local\\Continuum\\miniconda3\\envs\\Project_New\\lib\\site-packages\\tensorboard\\manager.py\", line 317, in get_all\n",
+      "    info = _info_from_string(contents)\n",
+      "  File \"C:\\Users\\Tatsiana_Drabysheusk\\AppData\\Local\\Continuum\\miniconda3\\envs\\Project_New\\lib\\site-packages\\tensorboard\\manager.py\", line 158, in _info_from_string\n",
+      "    raise ValueError(\"incompatible version: %r\" % (json_value,))\n",
+      "ValueError: incompatible version: {'cache_key': 'eyJhcmd1bWVudHMiOlsiLS1sb2dkaXI9Li9rYWdnbGUiLCItLXBvcnQiLCI2MDA2Il0sImNvbmZpZ3VyZV9rd2FyZ3MiOnt9LCJ3b3JraW5nX2RpcmVjdG9yeSI6ImQ6XFxNTFxcbWxfdHJhaW5pbmdcXGFwcF9wcmVkaWN0XFxub3RlYm9va3NcXGxvZ3MifQ==', 'db': '', 'logdir': './kaggle', 'path_prefix': '', 'pid': 21276, 'port': 6006, 'start_time': 1588570588, 'version': '2.0.0'}\n",
+      "invalid info file: 'C:\\\\Users\\\\TATSIA~1\\\\AppData\\\\Local\\\\Temp\\\\.tensorboard-info\\\\pid-21276.info'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tatsiana_Drabysheusk\\AppData\\Local\\Continuum\\miniconda3\\envs\\Project_New\\lib\\site-packages\\tensorboard\\manager.py\", line 317, in get_all\n",
+      "    info = _info_from_string(contents)\n",
+      "  File \"C:\\Users\\Tatsiana_Drabysheusk\\AppData\\Local\\Continuum\\miniconda3\\envs\\Project_New\\lib\\site-packages\\tensorboard\\manager.py\", line 158, in _info_from_string\n",
+      "    raise ValueError(\"incompatible version: %r\" % (json_value,))\n",
+      "ValueError: incompatible version: {'cache_key': 'eyJhcmd1bWVudHMiOlsiLS1sb2dkaXI9Li9rYWdnbGUiLCItLXBvcnQiLCI2MDA2Il0sImNvbmZpZ3VyZV9rd2FyZ3MiOnt9LCJ3b3JraW5nX2RpcmVjdG9yeSI6ImQ6XFxNTFxcbWxfdHJhaW5pbmdcXGFwcF9wcmVkaWN0XFxub3RlYm9va3NcXGxvZ3MifQ==', 'db': '', 'logdir': './kaggle', 'path_prefix': '', 'pid': 21276, 'port': 6006, 'start_time': 1588570588, 'version': '2.0.0'}\n"
+     ]
     },
     {
      "data": {
@@ -74,7 +83,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1426a0dc9c8>"
+       "<IPython.lib.display.IFrame at 0x19242d21b08>"
       ]
      },
      "metadata": {},
@@ -82,7 +91,7 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs/fit\n"
+    "%tensorboard --logdir logs/mlp/fit\n"
    ]
   },
   {
