--- a/app_predict/notebooks/imdb_best_model.ipynb
+++ b/app_predict/notebooks/imdb_best_model.ipynb
@@ -437,7 +437,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "review = re.sub(r'(\\d+)', r' \\1 ', review)"
+   ]
   }
  ],
  "metadata": {
