Added the final MLP model notebook. Changed application with the final MLP model.

--- a/app_predict/notebooks/imdb_best_model.ipynb
+++ b/app_predict/notebooks/imdb_best_model.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,19 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import GaussianNB, BernoulliNB, MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn import svm\n",
     "import datetime\n",
     "\n",
     "import re\n",
     "\n",
     "import pickle\n",
-    "\n",
-    "import joblib\n"
+    "import json\n",
+    "from datetime import date\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +149,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...          1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +237,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...          1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,19 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model = pipeline_best = Pipeline([\n",
-    "    ('vect', TfidfVectorizer(ngram_range=(1,2), preprocessor=preprocessing.preprocessing_text)),\n",
-    "    ('clf', svm.SVC(kernel='rbf', C=10, gamma=0.1, random_state=RANDOM_STATE)),\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,23 +296,58 @@
        "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
        "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
        "        ngram_range=(1, 2), norm='l2',\n",
-       "        preprocessor=<function prepr...f',\n",
-       "  max_iter=-1, probability=False, random_state=11, shrinking=True,\n",
-       "  tol=0.001, verbose=False))])"
+       "        preprocessor=<function prepr...f=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "        tokenizer=None, use_idf=True, vocabulary=None))])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_model.fit(X_train, y_train)"
+    "best_model_preprocessing = Pipeline([\n",
+    "    ('vect', TfidfVectorizer(ngram_range=(1,2), preprocessor=preprocessing.preprocessing_text)),\n",
+    "])\n",
+    "best_model_preprocessing.fit(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma=0.1, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=11, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model = svm.SVC(kernel='rbf', C=10, gamma=0.1, random_state=RANDOM_STATE)\n",
+    "best_model.fit(best_model_preprocessing.transform(X_train), y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_score_test = f1_score(best_model.predict(best_model_preprocessing.transform(X_test)), y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,13 +356,13 @@
        "0.913498035559699"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f1_score(best_model.predict(X_test), y_test)"
+    "f1_score_test"
    ]
   },
   {
@@ -353,34 +373,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "metadata_to_model = {\n",
-    "    'vectorizer' : 'TF-IDF vectorizer with ngramm_range=(1,2)',\n",
-    "    'model_type': 'SVM with rbf kernel',\n",
-    "    'author': 'Tatsiana Drabysheuskaya',\n",
-    "    'data' : '23-04-2020',\n",
-    "    'trainig_data' : 'https://www.kaggle.com/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews',\n",
-    "    'metrics_cross_validation': {\n",
-    "        'f1_score': '0.916'\n",
-    "    }\n",
-    "    }\n",
-    "\n"
+    "Let's train the final MLP model and save it to the destination folder: *`../service/model/svm/`*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_to_save = {\n",
-    "    'model' : best_model,\n",
-    "    'metadata' : metadata_to_model\n",
-    "}"
+    "folder_path = '../service/model/svm/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the metadata to model \n",
+    "metadata_to_model = {\n",
+    "    'vectorizer' : str(best_model_preprocessing.steps[0][1]),\n",
+    "    'model_type': 'SVM with rbf kernel',\n",
+    "    'author': 'Tatsiana Drabysheuskaya',\n",
+    "    'data' : str(date.today()),\n",
+    "    'trainig_data' : 'https://www.kaggle.com/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews',\n",
+    "    'metrics_cross_validation': {\n",
+    "        'f1_score': \"{:5.2f}%\".format(100*f1_score_test)\n",
+    "    }\n",
+    "    }\n",
+    "\n",
+    "metadata_file_name = folder_path + \"svm_model.json\"  \n",
+    "    \n",
+    "with open(metadata_file_name, 'w') as file:\n",
+    "    json_string = json.dumps(metadata_to_model, default=lambda o: o.__dict__, sort_keys=True, indent=2)\n",
+    "    file.write(json_string)\n",
+    "\n",
+    "                       "
    ]
   },
   {
@@ -392,37 +424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the model to disk with pickle\n",
-    "model_file_name = \"../service/model/model_sentiment_prediction.pkl\"  \n",
+    "model_file_name = folder_path + \"svm_final_model.pkl\"  \n",
     "\n",
     "with open(model_file_name, 'wb') as file:  \n",
-    "    pickle.dump(data_to_save, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../service/model/model_sentiment_prediction.sav']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# save the model to disk with joblib\n",
-    "filename = '../service/model/model_sentiment_prediction.sav'\n",
-    "joblib.dump(data_to_save, filename)"
+    "    pickle.dump(best_model, file)\n",
+    "    \n",
+    "# save the preprocessing to disk with pickle\n",
+    "preproc_file_name = folder_path + \"svm_final_model_preproc.pkl\"  \n",
+    "\n",
+    "with open(preproc_file_name, 'wb') as file:  \n",
+    "    pickle.dump(best_model_preprocessing, file)"
    ]
   },
   {
@@ -434,12 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "review = re.sub(r'(\\d+)', r' \\1 ', review)"
+    "# save a few test samples \n",
+    "test_samples_file_name = folder_path + \"svm_modelTest_samples.csv\"  \n",
+    "\n",
+    "test_df = pd.DataFrame({'review': X_test, 'sentiment': y_test})\n",
+    "test_df.sample(n=8, random_state=RANDOM_STATE).to_csv(test_samples_file_name) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
